add button to switch between youtube and spotify

--- a/final-project/src/Song.css
+++ b/final-project/src/Song.css
@@ -4,7 +4,8 @@
   gap: 15%;
   margin-left: 5%;
   margin-right: 5%;
-  margin-top: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .left_song {
