--- a/final-project/src/index.css
+++ b/final-project/src/index.css
@@ -13,15 +13,18 @@ code {
 }
 
 @keyframes text-shadow-change {
-  from {
+  0% {
     text-shadow: 3px 3px red;
   }
-  to {
+  50% {
     text-shadow: 3px 3px blue;
+  }
+  100% {
+    text-shadow: 3px 3px red;
   }
 }
 
-.title {
+.title h1 {
   text-align: center;
   color: white;
   text-shadow: 3px 3px red;
@@ -33,7 +36,7 @@ code {
 
 .title h1 {
   animation-name: text-shadow-change;
-  animation-duration: 6s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
 }
 
@@ -57,38 +60,4 @@ code {
 
 .user_account li a:hover {
   background-color: rgb(31, 124, 54);
-}
-
-ul.mode_switch {
-  list-style-type: none;
-  overflow: hidden;
-}
-
-.mode_switch {
-  display: table;
-  margin: 0 auto;
-}
-
-.mode_switch li {
-  background-color: rgb(15, 24, 13);
-  padding: 10px;
-  margin: 0 auto;
-  float: left;
-  display: inline;
-}
-
-.mode_switch li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.mode_switch li a[href*='Spotify']:hover {
-  background-color: rgb(31, 124, 54);
-}
-
-.mode_switch li a[href*='Youtube']:hover {
-  background-color: rgb(184, 32, 57);
 }
