--- a/final-project/src/Components/Header.css
+++ b/final-project/src/Components/Header.css
@@ -1,59 +1,13 @@
-@keyframes text-shadow-change {
-  0% {
-    text-shadow: 3px 3px red;
-  }
-  50% {
-    text-shadow: 3px 3px blue;
-  }
-  100% {
-    text-shadow: 3px 3px red;
-  }
+.main_content_header {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
 
-.title h1 {
-  text-align: center;
-  color: white;
-  text-shadow: 3px 3px red;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.main_content_header .title {
   font-weight: bold;
   font-style: italic;
   background-color: transparent;
-}
-
-.title h1 {
-  animation-name: text-shadow-change;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-}
-
-.user_account ul {
-  list-style-type: none;
-  padding: 0;
-  overflow: hidden;
-}
-
-.user_account li {
-  float: right;
-}
-
-.user_account li button {
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  background-color: transparent;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: bold;
-  font-size: 1rem;
-  border: none;
-}
-
-.user_account li button:hover {
-  background-color: rgb(31, 124, 54);
-}
-
-.Message {
-  text-align: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: bold;
-  font-size: 1.5rem;
+  text-shadow: 3px 3px #b388ff;
 }
