--- a/final-project/src/Components/Main.css
+++ b/final-project/src/Components/Main.css
@@ -1,13 +1,12 @@
 .main_content_header {
   text-align: center;
-  color: rgb(0, 0, 0);
+  color: white;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
 }
 
 .main_content_header .title {
   font-weight: bold;
   font-style: italic;
   background-color: transparent;
-  text-shadow: 3px 3px #b388ff;
+  text-shadow: 3px 3px black;
 }
