--- a/final-project/src/Components/User.css
+++ b/final-project/src/Components/User.css
@@ -2,16 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-align: center;
+  font-family: sans-serif;
 }
 
 .main_content_user .title {
   font-weight: bold;
   font-style: italic;
   color: white;
-  text-shadow: 3px 3px white;
-}
-
-.main_content_user .saved_playlists {
-
+  text-shadow: 3px 3px #1db954;
 }
