push import playlist stuff. Still has bugs to workout

--- a/backend/final-project/src/Components/User.css
+++ b/backend/final-project/src/Components/User.css
@@ -9,6 +9,6 @@
 .main_content_user .title {
   font-weight: bold;
   font-style: italic;
-  color: white;
+  color: #ffffff;
   text-shadow: 3px 3px #1db954;
 }
