--- a/backend/final-project/src/Components/Main.css
+++ b/backend/final-project/src/Components/Main.css
@@ -1,6 +1,6 @@
 .main_content_header {
   text-align: center;
-  color: white;
+  color: #ffffff;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
